--- a/home.css
+++ b/home.css
@@ -43,13 +43,13 @@ body{
 }
 .nav ul{
     display: flex;
-    justify-content: space-between;
     align-items: center;
+    padding-right: 8rem;
 
 }
 li{
     list-style: none;
-    padding: 1rem;
+    padding: 0.2rem;
 }
 .bn29 {
   border: none;
@@ -365,7 +365,7 @@ box-shadow:  6px 6px 12px #bcbcbc,
 }
 .protfolio-images{
 
-  width: 90%;
+  width: 100%;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -373,8 +373,9 @@ box-shadow:  6px 6px 12px #bcbcbc,
   justify-content: center;
 }
 .protfolio-images img{
-  padding: 1rem;
-  width: 27rem;
+  padding: 0.5rem;
+  width: 25rem;
+  height: 20rem;
 }
 .testimonial-img img{
   width: 8rem;
