--- a/home.css
+++ b/home.css
@@ -33,6 +33,7 @@ header {
     width: 100vw;
     position: fixed;
     background-color: var(--bg);
+    z-index: 1;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
@@ -112,13 +113,13 @@ button {
 }
 .toggle{
     position: absolute;
-    top: 9rem;
+    top: 10rem;
     right: 5rem;
     display: none;
     flex-direction: column;
     justify-content: space-between;
-    width: 10rem;
-    height: 5rem;
+    width: 7rem;
+    height: 4rem;
     cursor: pointer;
 }
 .bar{
@@ -415,7 +416,33 @@ line-height: 2;
   display: table;
   clear: both;
 }
+.prev, .next {
+  cursor: pointer;
+  top: 50%;
+  width: auto;
+  margin-top: -22px;
+  padding: 16px;
+  color: black;
+  font-weight: bold;
+  font-size: 18px;
+  border-radius: 0 3px 3px 0;
+}
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
 
+@-webkit-keyframes fade {
+  from {opacity: .4}
+  to {opacity: 1}
+}
+
+@keyframes fade {
+  from {opacity: .4}
+  to {opacity: 1}
+}
 
 
 
@@ -446,6 +473,7 @@ line-height: 2;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  align-items: center;
 
 }
 .tbtn{
@@ -482,7 +510,6 @@ box-shadow:  6px 6px 12px #bcbcbc,
 }
 .cardbody{
   display: contents;
-
 }
 
 .testimonials-corousel{
@@ -492,7 +519,7 @@ box-shadow:  6px 6px 12px #bcbcbc,
   align-items: center;
 }
 .tcard{
-    display: flex;
+    display: none;
     align-items: center;
     justify-content: space-between;
     background: #e0e0e0;
@@ -501,7 +528,9 @@ box-shadow:  6px 6px 12px #bcbcbc,
     background-color: var(--bg);
     border-radius: 2rem;
 }
-
+.active{
+  display: flex;
+}
 .disable{
   display: none;
 }
@@ -701,6 +730,10 @@ footer{
     padding:0.3rem 1.2rem;
 
     font-size: 1.5rem;
+  }
+
+  .prev, .next {
+    font-size: 3rem;
   }
 
   .protfolio-images img{
