--- a/home.css
+++ b/home.css
@@ -3,19 +3,17 @@
   --b: #303BA0;
   --db: #000F47;
 }
-
 * {
   padding: 0;
   margin: 0;
 }
-
 body {
   font-family: 'Poppins', sans-serif;
   background-color: var(--bg);
   width: 100%;
 }
 
-@media screen and (min-width: 1000px) {
+@media screen and (min-width: 1024px) {
   .mobile {
     display: none
   }
@@ -38,7 +36,6 @@ header {
   border-style: hidden;
   box-shadow: 1px 4px 3px lightgrey;
 }
-
 .logo {
   cursor: pointer;
 }
@@ -63,7 +60,7 @@ button {
   cursor: pointer;
   transition: all 0.3s ease 0s;
 }
-
+/* overlay is the menu in mobile and tab */
 .overlay {
   height: 100%;
   width: 0;
@@ -103,10 +100,10 @@ button {
   font-size: 1rem;
   letter-spacing: 1.1rem;
 }
-
+/* toggle is the hamburger icon */
 .toggle {
   position: absolute;
-  top: 10rem;
+  top: 6rem;
   right: 5rem;
   display: none;
   flex-direction: column;
@@ -122,6 +119,7 @@ button {
   height: 3px;
 }
 
+/* these are the navbar button elements */
 .bn29 {
   border: none;
   padding: 0.8em 1em;
@@ -193,107 +191,7 @@ li, a {
   margin-left: 20px;
 }
 
-/* Pure CSS3 Switch */
-.clear-menu-btn {
-  position: relative;
-  width: 100px;
-  height: 100px;
-  margin: 0 auto;
-}
-
-.clear-menu-btn input[type="checkbox"] {
-  position: absolute;
-  filter: alpha(opacity=0);
-  opacity: 0;
-  width: 100%;
-  height: 100%;
-}
-
-.clear-menu-btn input[type="checkbox"]:hover {
-  cursor: pointer;
-}
-
-.clear-menu-btn input[type="checkbox"]:checked~.top, .clear-menu-btn input[type="checkbox"]:checked~.bottom {
-  top: 50%;
-}
-
-.clear-menu-btn input[type="checkbox"]:checked~.top {
-  -webkit-transform: rotate(45deg);
-  -moz-transform: rotate(45deg);
-  -ms-transform: rotate(45deg);
-  -o-transform: rotate(45deg);
-  transform: rotate(45deg);
-}
-
-.clear-menu-btn input[type="checkbox"]:checked~.bottom {
-  -webkit-transform: rotate(-45deg);
-  -moz-transform: rotate(-45deg);
-  -ms-transform: rotate(-45deg);
-  -o-transform: rotate(-45deg);
-  transform: rotate(-45deg);
-}
-
-.clear-menu-btn input[type="checkbox"]:checked~.middle {
-  filter: alpha(opacity=0);
-  opacity: 0;
-}
-
-.clear-menu-btn input[type="checkbox"]:checked~.circle {
-  filter: alpha(opacity=100);
-  opacity: 1;
-}
-
-.clear-menu-btn span {
-  position: absolute;
-  display: block;
-  width: 100px;
-  height: 1px;
-  background-color: #000;
-  -webkit-transition: all 0.3s;
-  -moz-transition: all 0.3s;
-  -ms-transition: all 0.3s;
-  -o-transition: all 0.3s;
-  transition: all 0.3s;
-  z-index: -1;
-}
-
-.clear-menu-btn .top {
-  top: 15%;
-}
-
-.clear-menu-btn .middle {
-  top: 50%;
-}
-
-.clear-menu-btn .bottom {
-  top: 85%;
-}
-
-.clear-menu-btn .circle {
-  display: block;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-  -moz-transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-  -o-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-  filter: alpha(opacity=0);
-  opacity: 0;
-  width: 120px;
-  height: 120px;
-  background-color: transparent;
-  border-radius: 50%;
-  border: 2px solid #000;
-  -webkit-transition: all 0.5s;
-  -moz-transition: all 0.5s;
-  -ms-transition: all 0.5s;
-  -o-transition: all 0.5s;
-  transition: all 0.5s;
-  z-index: -1;
-}
-
+/* Intro CSS */
 .intro {
   display: flex;
   flex-direction: column;
@@ -338,6 +236,7 @@ li, a {
   font-weight: bold;
   line-height: 1.5rem;
 }
+/* research css  */
 
 .research, .Market-analysis {
   display: flex;
@@ -494,7 +393,8 @@ li, a {
 
 .row {
   display: flex;
-  justify-content: space-evenly;
+  align-items: center;
+  justify-content: center;
   flex-wrap: wrap;
 }
 
@@ -538,11 +438,48 @@ li, a {
   justify-content: center;
 }
 
-.protfolio-images img {
+.container {
+ align-items: center;
+ position: relative;
+}
+.container img{
   padding: 0.5rem;
   width: 25rem;
   height: 20rem;
 }
+
+.image {
+  opacity: 1;
+  display: block;
+  width: 100%;
+  height: auto;
+  transition: .5s ease;
+  backface-visibility: hidden;
+}
+
+.middle {
+  transition: .5s ease;
+  opacity: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  text-align: center;
+}
+
+.container:hover .image {
+  opacity: 0.3;
+}
+
+.container:hover .middle {
+  opacity: 1;
+}
+
+/*
+.protfolio-images img {
+
+} */
 
 .testimonial-img img {
   width: 8rem;
@@ -618,6 +555,21 @@ li, a {
   padding: 0.2rem;
 }
 
+/* The dots/bullets/indicators */
+.dot {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.dots span.dot.dotactive, .dot:hover {
+  background-color: var(--b);
+}
 .bn {
   background-color: var(--b);
   border: none;
@@ -641,7 +593,7 @@ footer {
 }
 
 /* Responsive columns */
-@media screen and (max-width: 1000px) {
+@media screen and (max-width: 1024px) {
   .desktop {
     display: none;
   }
@@ -676,7 +628,7 @@ footer {
   }
 
   header {
-    height: 20rem;
+    height: 13rem;
     justify-content: space-between;
   }
 
@@ -811,11 +763,15 @@ footer {
     font-size: 3rem;
   }
 
-  .protfolio-images img {
+  .container img{
     padding: 1rem;
     width: 53rem;
     height: 45rem;
   }
+/*
+  .protfolio-images img {
+
+  } */
 
   .tcard {
     width: 60%;
