--- a/home.css
+++ b/home.css
@@ -535,7 +535,7 @@ footer {
   .workinfo-mobile {
     width: 100%;
     height: 19rem;
-    background-image: url("Files/Assets/Process(tab and mobile).svg");
+    background-image: url("Images/Process(tab and mobile).svg");
     background-position: center;
     background-size: 10rem;
     background-repeat: no-repeat;
@@ -631,7 +631,7 @@ footer {
 
   .tcard {
     width: 60%;
-    display: flex;
+    display: contents;
     flex-direction: column;
   }
 
@@ -768,7 +768,7 @@ footer {
   .workinfo-mobile {
     width: 100%;
     height: 58rem;
-    background-image: url("Files/Assets/Process(tab and mobile).svg");
+    background-image: url("Images/Process(tab and mobile).svg");
     background-position: center;
     background-size: 45%;
     background-repeat: no-repeat;
@@ -904,7 +904,7 @@ footer {
   .workinfo {
     width: 100%;
     height: 23rem;
-    background-image: url("Files/Assets/Process(desktop).svg");
+    background-image: url("Images/Process(desktop).svg");
     background-position: center;
     background-size: 85%;
     background-repeat: no-repeat;
