--- a/home.css
+++ b/home.css
@@ -175,7 +175,7 @@ button {
   background-color: var(--bg);
   border-radius: 2rem;
 }
-.card::afterhover{
+.card:hover{
     box-shadow: 15px 15px 15px #cccccc, -15px -15px 15px #f4f4f4;
 }
 
