--- a/home.css
+++ b/home.css
@@ -42,7 +42,7 @@ header nav ul {
 }
 
 li, a {
-
+  padding: 0.2rem;
   list-style: none;
   text-decoration: none;
 }
@@ -142,7 +142,7 @@ button {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-top: 5rem;
+  margin-top: 3rem;
   padding-top: 6rem;
   height: 100%;
 }
@@ -157,13 +157,19 @@ button {
   text-align: left;
   line-height: 2;
 }
-
+.research{
+  padding-top: 10rem;
+}
 .intro {
   height: 100vh;
 }
-
+.intro-buttons{
+  width:30rem;
+  display: flex;
+  justify-content: space-around;
+}
 .intro-buttons button, .button, .cardbutton {
-  padding: 0.8rem 3rem;
+  padding: 0.8rem 3.8rem;
   color: #fff;
   background-color: var(--b);
   font-size: 1rem;
@@ -342,10 +348,9 @@ button {
 }
 
 .copyright {
-  align-items: center;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+    align-items: center;
+    display: flex;
+    justify-content: flex-end;
 }
 
 footer {
@@ -402,7 +407,11 @@ footer {
   display: flex;
   align-items: center;
 }
-
+.footer-info{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 .phone p, .mail p {
   padding-left: 1rem;
 }
@@ -411,12 +420,7 @@ footer {
   padding: 0.2rem;
 }
 
-.copyright {
-  align-items: center;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
+
 
 footer {
   padding: 0.3rem;
@@ -448,7 +452,14 @@ footer {
   body {
     background-color: var(--bg);
   }
-
+  .copyright{
+    flex-direction: column;
+    justify-content: space-around;
+    height:7rem;
+  }
+  .footer-icons{
+    display: flex;
+  }
   header {
     height: 6rem;
   }
@@ -492,11 +503,11 @@ footer {
   }
 
   .intro-buttons {
-    height: 8rem;
+    height: 12rem;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-evenly;
   }
 
   .intro-buttons button, .button, .cardbutton {
@@ -597,7 +608,7 @@ footer {
   }
 
   .tbtn {
-    font-size: 0.6rem;
+    font-size: 0.65rem;
     padding: 0.3rem 0.8rem;
     border: 1px solid var(--bg);
     background-color: var(--bg);
@@ -626,7 +637,10 @@ footer {
     border-radius: 2rem;
     padding-top: 2rem;
   }
+ ul.tabs{
+   width: 90vw;
 
+ }
   .end {
     padding: 1rem 2rem;
     display: flex;
@@ -682,7 +696,7 @@ footer {
   }
 
   .overlay a {
-    font-size: 1rem;
+    font-size: 2rem;
   }
 
   .overlay .close {
@@ -758,7 +772,11 @@ footer {
     flex-direction: column;
     justify-content: space-evenly;
   }
+  .footer-icons{
+    margin-left: 20rem;
+    display: flex;
 
+  }
   .sub {
     font-size: 1rem;
   }
@@ -940,5 +958,10 @@ footer {
     width: 100%;
     height: 22rem;
     border-radius: 2rem;
+  }
+
+  .footer-icons{
+    padding-left: 35rem;
+    display: flex;
   }
 }
